# Agentic-RagBot

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY_HUGGINGFACE.md  Dockerfile  GITHUB_READY.md  LICENSE  Makefile  QUICKSTART.md  README.md  START_HERE.md  code.ipynb  docker-compose.yml  gradio_launcher.py  pyproject.toml  pytest.ini  requirements.txt
airflow/dags/: ingest_pdfs.py
alembic/: env.py
alembic/versions/: 001_initial.py
api/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  START_HERE.md  docker-compose.yml  requirements.txt  start_server.ps1  test_api.ps1
api/app/: __init__.py  main.py
archive/: sop_evolution.py
archive/evolution/: __init__.py  director.py  pareto.py
archive/tests/: test_evolution_loop.py  test_evolution_quick.py
config/: biomarker_references.json
data/chat_reports/: report_Diabetes_20260207_012151.json  report_Diabetes_20260223_124903.json  report_Diabetes_20260223_142525.json  report_unknown_20260223_124439.json
data/vector_stores/: medical_knowledge.faiss  medical_knowledge.pkl
docs/: API.md  ARCHITECTURE.md  DEEP_REVIEW.md  DEVELOPMENT.md  REMEDIATION_PLAN.md
docs/archive/: CLI_CHATBOT_IMPLEMENTATION_COMPLETE.md  CLI_CHATBOT_IMPLEMENTATION_PLAN.md  CLI_CHATBOT_USER_GUIDE.md  COMPREHENSIVE_SKILLS_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS_TRACKER.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  NAVIGATION_GUIDE.md  NEXT_STEPS_GUIDE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PROGRESS.md  QUICK_START.md  SETUP_EMBEDDINGS.md  SKILLS_INSTALLED.md  SKILLS_INSTALLED_UPDATED.md  SKILLS_QUICK_REFERENCE.md  SKILLS_SUMMARY.txt  SKILLS_VERIFICATION_REPORT.md  SKILL_TO_CODE_MAPPING.md  SYSTEM_VERIFICATION.md  WEEK1_EXECUTION_PLAN.md  project_context.md
examples/: README.md  test_website.html  website_integration.js
huggingface/: .env.example  .env.huggingface  Dockerfile  README.md  app.py  requirements.txt
scripts/: README.md  chat.py  deploy_huggingface.ps1  monitor_test.py  run_api.ps1  run_tests.ps1  setup_embeddings.py  start_api.ps1  start_server.ps1  test_api_simple.ps1  test_chat_demo.py  test_extraction.py
src/: __init__.py  biomarker_normalization.py  biomarker_validator.py  config.py  database.py  dependencies.py  exceptions.py  gradio_app.py  llm_config.py  main.py  middlewares.py  pdf_processor.py  settings.py  shared_utils.py  state.py  workflow.py
src/agents/: __init__.py  (+6 more)
tests/: basic_test_script.py  test_agentic_rag.py  test_basic.py  test_biomarker_service.py  test_cache.py  test_citation_guardrails.py  test_codebase_fixes.py  test_diabetes_patient.py  test_evaluation_system.py  test_evolution_loop.py  test_evolution_quick.py  test_exceptions.py  test_integration.py  test_json_parsing.py  test_llm_config.py  test_medical_safety.py  test_models.py  test_normalization.py  test_opensearch_config.py  test_output_diabetes.json  test_pdf_parser.py  test_prediction_confidence.py  test_production_api.py  test_prompts.py  test_response_mapping.py  test_schemas.py  test_settings.py  test_state_fields.py  test_text_chunker.py  test_validator_count.py
(+63 files in other folders)
